@@ -3,6 +3,12 @@ Change log for duff
 
 Maintained since version 0.3.1.
 
+2013-09-13  Camilla Berglund  <dreda@dreda.org>
+
+ * duffutil.c (set_digest_function): Changed to accept a string.
+ * duff.h duff.c duffutil.c: Made all digest function selection logic local to
+ util module.
+
 2013-07-23  Camilla Berglund  <dreda@dreda.org>
 
  * dufffile.c (compare_files): Cleaned up devnode comparison logic.
